fixed layout issue

--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -1,6 +1,6 @@
 
 header {
-    background-color: var(--background-color-200);
+    background-color: var(--background-color-200)
 }
 
 
