--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,5 @@
 @import url(/src/styles/components/header.css);
+@import url(/src/styles/components/footer.css);
 
 
 :root {
@@ -7,9 +8,14 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: #ffffffde;
   background-color: #242424;
+
+
   --background-color-200: #181818;
+
+  --color-text-accent: #277ee0de;
+
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -29,28 +35,38 @@ a:hover {
 }
 
 body {
+
+
   margin: 0;
   min-width: 320px;
-  min-height: 100vh;
+  height: 100vh;
   font-size: 16px;
 }
+
 
 h1 {
   font-size: 2.5em;
   line-height: 1.1;
 }
 
+
+#app {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 #content {
+
+  flex-grow: 1;
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding-inline: 2rem;
   text-align: center;
-  height: 100%;
 }
 
 .logo {
-  height: 6em;
-  padding: 1.5em;
+
   will-change: filter;
   transition: filter 300ms;
 }
